commit file demo

--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/demo3.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/demo3.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<button type="button" onclick="showMessage();">Click me!</button>
 <script src="js_demo2.js"></script>
 </body>
 </html>
