\dien tich hinh chu nhat

--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_Diemtrungbinh.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_Diemtrungbinh.html
@@ -18,7 +18,7 @@
     let b=parseInt(diemHoahoc);
     let c=parseInt(diemVatli);
 
-    let DTB=(a+b+c)/3;
+    let DTB=(a+b+c)/3f;
     let SUM=a+b+c;
     document.write("Diểm trung bình của sinh viên là :" +DTB);
 
