--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_Diemtrungbinh.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_Diemtrungbinh.html
@@ -14,11 +14,11 @@
     diemVatli=prompt("Nhập vào điểm Vật lí: ");
     diemHoahoc=prompt("Nhập vào điểm Hóa học ");
 
-    let a=parseInt(diemSinh);
-    let b=parseInt(diemHoahoc);
-    let c=parseInt(diemVatli);
+    let a=parseFloat(diemSinh);
+    let b=parseFloat(diemHoahoc);
+    let c=parseFloat(diemVatli);
 
-    let DTB=(a+b+c)/3f;
+    let DTB=(a+b+c)/3;
     let SUM=a+b+c;
     document.write("Diểm trung bình của sinh viên là :" +DTB);
 
