\dien tich hinh chu nhat

--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_ChuyendoiDo.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/BT_ChuyendoiDo.html
@@ -9,7 +9,7 @@
     let doC;
 
 
-    let doC=prompt("Nhập vào độ C :");
+    doC=prompt("Nhập vào độ C :");
 
     let a=parseFloat(doC);
     let b=(9*a+160)/5;
