--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Cấu trúc lặp/phần thực hành/Sử dụng vòng lặp lồng nhau/hienthibangso.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Cấu trúc lặp/phần thực hành/Sử dụng vòng lặp lồng nhau/hienthibangso.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     let sout;
-    sout="<table border='1' width='1' cellspacing='0' cellpadding='3'>";
+    sout="<table border='1' width='300 cellspacing='0' cellpadding='3'>";
     for (let i=1;i<=10;i++) {
         sout=sout+"<tr>";
         for(let j=1;j<=10;j++){
