--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Cấu trúc lặp/phần thực hành/Sử dụng vòng lặp lồng nhau/hienthibangso2.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Cấu trúc lặp/phần thực hành/Sử dụng vòng lặp lồng nhau/hienthibangso2.html
@@ -7,7 +7,19 @@
 <body>
 <script>
     let i,j,sout;
-    sout="<table width='300' cellpadding='3' cellspacing='0' >"
+    sout="<table border='1' width='300' cellpadding='3' cellspacing='0' >";
+    i=j=1;
+    while (i<=10) {
+        sout=sout+"<tr>";
+
+        while (j<=10){
+            sout=sout+"<td>"+i*j+"</td>";
+            j++;
+        } sout=sout+"</tr>";
+        j=1;
+        i++;
+    }sout=sout+"</table>";
+    document.write(sout);
 </script>
 </body>
 </html>
