--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Mảng/Phần bài tập/Tạo ứng dụng từ điển/ungdungtudien.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Mảng/Phần bài tập/Tạo ứng dụng từ điển/ungdungtudien.html
@@ -22,7 +22,12 @@
                     }else {
                         document.getElementById("viet").innerHTML ="Không tìm thây";
                     }
-
+                    if(arr_viet[i]==nhap){
+                        document.getElementById("viet").innerHTML = arr_anh[i];
+                        break;
+                    }else{
+                        document.getElementById("viet").innerHTML ="Không tìm thây";
+                    }
 
 
                 }
