--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Hàm/Phần bài tập/Luyện tập tạo và sử dụng hàm 02/bai3.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Hàm/Phần bài tập/Luyện tập tạo và sử dụng hàm 02/bai3.html
@@ -5,6 +5,19 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    function giaiThua(n) {
+       let ketqua=1;
+       for (let i=1;i<=n;i++){
+           ketqua*=i;
 
+       }
+        return ketqua;
+
+    }
+    let nhap=prompt("Nhập vào số cần tính: ");
+    hello=giaiThua(nhap);
+    alert("kết quả là : " +hello);
+</script>
 </body>
 </html>
