--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Hàm/Phần bài tập/Ứng dụng quản lý sản phẩm sử dụng hàm/ungdungquanlisanpham.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Hàm/Phần bài tập/Ứng dụng quản lý sản phẩm sử dụng hàm/ungdungquanlisanpham.html
@@ -12,9 +12,6 @@
 
         let arr = new Array("Sony Xperia", "SamSung Galaxxy", "Nokia 6", "Xiaomi Redmi Note4x", "Iphone 6", "Xiaomi Mi 5s Plus", "Iphone 8 Plus", "Fujitsu F-E04", "Oppo A71");
         inLai(arr);
-
-
-
         function inLai(arr) {
 
             // let arr = new Array("Sony Xperia", "SamSung Galaxxy", "Nokia 6", "Xiaomi Redmi Note4x", "Iphone 6", "Xiaomi Mi 5s Plus", "Iphone 8 Plus", "Fujitsu F-E04", "Oppo A71");
@@ -30,7 +27,7 @@
             for (let i = 0; i < arr.length; i++) {
                 sout += "<tr>" + "<form>"
                     + "<td>" + arr[i] + "</td>"
-                    + "<td>" + "<button onclick='hienThiForm("+i+");'>Edit</button>" + "</td>"
+                    + "<td>" + "<button onclick='hienThiForm("+i+");return false;'>Edit</button>" + "</td>"
                     + "<td>" + "<button onclick='deleteSP("+i+");'>Delete</button>" + "</td>"
                     + "</tr>";
             }
@@ -52,7 +49,7 @@
 
             document.write(
                 "<form>" +
-                "<input  type='text' id='edit_ip'>" + "<button type='button' id='edit_btn' onclick='editSP("+i+")'>edit</button>" +
+                "<input  type='text' id='edit_ip'>" + "<button type='button' id='edit_btn' onclick='editSP("+i+");return false;'>edit</button>" +
                 "</form>"
             );
         }
