--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần thực hành/Xây dựng lớp hình tròn.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần thực hành/Xây dựng lớp hình tròn.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    this.myCircle=function (radius) {
+    function myCircle (radius) {
         //thuộc tính
         this.radius=radius;
         //phuong thức
