--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần thực hành/Xây dựng lớp hình tròn.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần thực hành/Xây dựng lớp hình tròn.html
@@ -9,14 +9,12 @@
     function myCircle (radius) {
         //thuộc tính
         this.radius=radius;
-        //phuong thức
-        this.getRadius=getRadius;
-        this.getArea=getArea;
+
         //xây dựng phương thức
-        function getRadius() {
+        this.getRadius=function () {
             return radius;
         }
-        function getArea() {
+        this.getArea=function () {
             return Math.PI*radius*radius;
         }
     }
