--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần bài tập/Game đơn giản - di chuyển đối tượng/index.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần bài tập/Game đơn giản - di chuyển đối tượng/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <div id="game"></div>
+<div id="game1"></div>
+<div id="game2"></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
