--- a/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần bài tập/Phát triển ứng dụng nhỏ mô phỏng câu chuyện Adam và Eva/index.html
+++ b/C0120G1/Module1/src/C0120G1_Tran_Ngoc_Tan/Lập trình hướng đối tượng/Phần bài tập/Phát triển ứng dụng nhỏ mô phỏng câu chuyện Adam và Eva/index.html
@@ -12,22 +12,22 @@
 <input type="button" value="Khối lượng" onclick="donViTao();"><br><br>
 
 <img src="adam.jpg" alt=""><br>
-<input type="button" value="Tên" onclick="goiTen('adam');"><br>
-<input type="button" value="Tuổi" onclick="goiTuoi('adam');"><br>
-<input type="button" value="Giới Tính" onclick="adam.isMale();goiGioiTinh('adam');"><br>
-<input type="button" value="Nói" onclick="chaoHoi('adam');"><br>
-<input type="button" value="Cân Nặng" onclick="canNang('adam')">
-<input type="button" value="Kiểm tra khối lượng Táo" onclick="kiemTraTao('adam');"><br>
-<input type="button" value="Ăn Táo" onclick="adam.eatTao();anTao('adam');"><br>
+<input type="button" value="Tên" onclick="goiTen(adam);"><br>
+<input type="button" value="Tuổi" onclick="goiTuoi(adam);"><br>
+<input type="button" value="Giới Tính" onclick="adam.isMale();goiGioiTinh(adam);"><br>
+<input type="button" value="Nói" onclick="chaoHoi(adam);"><br>
+<input type="button" value="Cân Nặng" onclick="canNang(adam)">
+<input type="button" value="Kiểm tra khối lượng Táo" onclick="kiemTraTao(adam);"><br>
+<input type="button" value="Ăn Táo" onclick="adam.eatTao();anTao(adam);"><br>
 
 <img src="eva.jpg" alt=""><br>
-<input type="button" value="Tên" onclick="goiTen('eva');"><br>
-<input type="button" value="Tuổi" onclick="goiTuoi('eva');"><br>
-<input type="button" value="Giới Tính" onclick="eva.isFemale();goiGioiTinh('eva');"><br>
-<input type="button" value="Nói" onclick="chaoHoi('eva');"><br>
-<input type="button" value="Cân Nặng" onclick="canNang('eva')">
-<input type="button" value="Kiểm tra khối lượng Táo" onclick="kiemTraTao('eva')"><br>
-<input type="button" value="Ăn Táo" onclick="eva.eatTao();anTao('eva');"><br>
+<input type="button" value="Tên" onclick="goiTen(eva);"><br>
+<input type="button" value="Tuổi" onclick="goiTuoi(eva);"><br>
+<input type="button" value="Giới Tính" onclick="eva.isFemale();goiGioiTinh(eva);"><br>
+<input type="button" value="Nói" onclick="chaoHoi(eva);"><br>
+<input type="button" value="Cân Nặng" onclick="canNang(eva)">
+<input type="button" value="Kiểm tra khối lượng Táo" onclick="kiemTraTao(eva)"><br>
+<input type="button" value="Ăn Táo" onclick="eva.eatTao();anTao(eva);"><br>
 
 <script type="text/javascript" src="nguoi.js"></script>
 <script type="text/javascript" src="run1.js"></script>
