--- a/C0120G1/Module3/CSS/Bai_Tap/Web_doc_truyen/demo.html
+++ b/C0120G1/Module3/CSS/Bai_Tap/Web_doc_truyen/demo.html
@@ -11,10 +11,103 @@
         <img src="image/truyen.jpg" width="100" height="100" alt="">
         <h1>TRUYEN</h1>
         <div id="tp-search">
-            <input type="text"placeholder="Nhập tên truyện hoặc tác giả cần tìm...">
+            <input type="text" placeholder="Nhập tên truyện hoặc tác giả cần tìm...">
+            <p>TÌM KIẾM TRUYỆN</p>
         </div>
         <p style="color: #9c9a9a">Chúc các bạn đọc truyện vui vẻ</p>
     </div>
+    <div id="head-link">
+        <a href="" id="home_page">TRANG CHỦ</a>
+        <a href="">THỂ LOẠI</a>
+        <a href="">NGÔN TÌNH</a>
+        <a href="">TRUYỆN TEEN</a>
+        <a href="">TRUYỆN MỚI</a>
+        <a href="">TRUYỆN TRANH</a>
+        <a href="">READ NOVELS</a>
+    </div>
+    <div class="container">
+        <div id="left">
+            <div id="title-left">
+                <h1>TRUYEN TOP</h1>
+            </div>
+
+
+            <div class="list-left">
+                <ul>
+                    <li><a href="">Ngon tinh</a></li>
+                    <li><a href="">Truyen Teen</a></li>
+                    <li><a href="">Xuyen Khong </a></li>
+                    <li><a href="">Kiem Hiep</a></li>
+                    <li><a href="">Tien Hiep</a></li>
+                    <li><a href="">Sac Hiep</a></li>
+                    <li><a href="">Lich Su</a></li>
+                    <li><a href="">Quan Su</a></li>
+                    <li><a href="">Do Thi</a></li>
+                    <li><a href="">Vong Du</a></li>
+                    <li><a href="">Di Nang</a></li>
+                    <li><a href="">Khoa Huyen</a></li>
+                    <li><a href="">Trinh Tham</a></li>
+                    <li><a href="">Truyen ma</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="content">
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+            <div class="content-img">
+                <img src="image/story1.jpg" alt="">
+                <h5 style="color: #ef7338">Dai chua te</h5>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
 </main>
 </body>
 </html>
