--- a/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/demo.html
+++ b/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/demo.html
@@ -159,16 +159,29 @@
 
 <!--slide-->
 <section class="container-fluid" >
-    <div class="row">
-        <div class="wrap-icon col-md-12">
-         <ul>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-             <li><img src="image/iconvip1.svg" width="40" height="30" alt=""></li>
-         </ul>
+    <div class="row justify-content-center mt-3">
+        <div class="wrap-icon">
+            <img src="image/iconvip1.svg" width="50" height="40" alt="">
+            <a href="">COMPARE DEVIVES</a>
+
+        </div>
+        <div class="wrap-icon">
+            <img src="image/iconvip2.svg" width="50" height="40" alt="">
+            <a href="">COMPARE DEVIVES</a>
+
+        </div>
+        <div class="wrap-icon">
+            <img src="image/iconvip3.svg" width="50" height="40" alt="">
+            <a href="">COMPARE DEVIVES</a>
+
+        </div>
+        <div class="wrap-icon">
+            <img src="image/iconvip4.svg" width="50" height="40" alt="">
+            <a href="">COMPARE DEVIVES</a>
+        </div>
+        <div class="content-jumbo col-md-9">
+            <h2>Working remotely with Surface</h2>
+            <p style="font-size: 18px">From home office to kitchen table to living room couch, Surface delivers the power to get it done, hi-res touchscreens and Dolby® Audio™ for music and shows, HD cameras to stay in touch, and the Windows you know.</p>
         </div>
     </div>
 
