--- a/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/demo.html
+++ b/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/demo.html
@@ -112,7 +112,6 @@
             </div>
 
 
-
         </div>
     </nav>
 </header>
@@ -132,7 +131,7 @@
             <img src="image/silde1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h1 style="font-family: 'Segoe UI';font-size: 34px ">Do you best work <br>
-                wherever you are</h1>
+                    wherever you are</h1>
                 <p style="font-size: 20px">Tran Ngoc Tan codegym 2020 front-end </p>
             </div>
         </div>
@@ -158,7 +157,7 @@
 
 
 <!--slide-->
-<section class="container-fluid" >
+<section class="container-fluid">
     <div class="row justify-content-center mt-3">
         <div class="wrap-icon">
             <img src="image/iconvip1.svg" width="50" height="40" alt="">
@@ -181,11 +180,109 @@
         </div>
         <div class="content-jumbo col-md-9">
             <h2>Working remotely with Surface</h2>
-            <p style="font-size: 18px">From home office to kitchen table to living room couch, Surface delivers the power to get it done, hi-res touchscreens and Dolby® Audio™ for music and shows, HD cameras to stay in touch, and the Windows you know.</p>
+            <p style="font-size: 18px">From home office to kitchen table to living room couch, Surface delivers the
+                power to get it done, hi-res touchscreens and Dolby® Audio™ for music and shows, HD cameras to stay in
+                touch, and the Windows you know.</p>
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="img-left col-xs-12 col-md-6">
+                <img class="fluid" src="image/sp1.jpg" alt="" height="600">
+                <img class="fluid mt-2" src="image/sp2.jpg" alt="" height="600">
+            </div>
+            <div class="img-left col-xs-12 col-md-6">
+                <img class="fluid" src="image/sp3.jpg" alt="" height="400">
+                <img class="fluid mt-2" src="image/sp4.png" alt="" height="800">
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row justify-content-center near-footer">
+            <hr class="mt-5">
+            <div class="wrap-icon">
+                <img src="image/iconvip1.svg" width="50" height="40" alt="">
+                <a href="">COMPARE DEVIVES</a>
+
+            </div>
+            <div class="wrap-icon">
+                <img src="image/iconvip2.svg" width="50" height="40" alt="">
+                <a href="">COMPARE DEVIVES</a>
+
+            </div>
+            <div class="wrap-icon">
+                <img src="image/iconvip3.svg" width="50" height="40" alt="">
+                <a href="">COMPARE DEVIVES</a>
+
+            </div>
+            <div class="wrap-icon">
+                <img src="image/iconvip4.svg" width="50" height="40" alt="">
+                <a href="">COMPARE DEVIVES</a>
+            </div>
+            <hr class="mt-5">
+        </div>
+    </div>
+    <div class="bot-section mb-5">
+        <p class="pt-3" >* Type Cover, Surface Dial, Microsoft Office, and some software and
+            accessories sold separately. Surface Pen sold separately for Surface Book 3, Surface Pro 7, Surface Laptop
+            3, Surface Pro X, and Surface Go 2.</p>
+    </div>
 </section>
+<footer class="container-fluid justify-content-center ">
+    <div class="row">
+        <ul class="col-md-2">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+        <ul class="col-md-2 ">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+        <ul class="col-md-2">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+        <ul class="col-md-2">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+        <ul class="col-md-2">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+        <ul class="col-md-2">
+            <li class="top">What's new</li>
+            <li>Surface Book 3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+            <li>Microsoft3</li>
+        </ul>
+    </div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
